added logout Button

--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="nav-bar">
+        <img src="assets/img/logo_lefter.svg">
         <a href="summary.html">
-            <img src="assets/img/logo_lefter.svg">
             <div class="content-section" style="margin-top: 100px;" id="summary-section">
                 <div>
                     <img src="assets/img/icon-summary.svg">
@@ -62,8 +62,8 @@
             <img src="assets/img/profile_pic.svg" onclick="showLogout()" class="profile-pic">
         </div>
     </div>
-    <div class="logoutButton">
-
+    <div class="logout-button d-none" id="logout-button" onclick="hideLogout()">
+        <a href="index.html"><div>Log out</div></a>
     </div>
 </body>
 
