--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -10,7 +10,10 @@
 <body>
     <div class="topper-mobile">
         <img src="assets/img/joinlogoBlack.svg">
-        <img src="assets/img/profile_pic.svg" class="profile-pic">
+        <img src="assets/img/profile_pic.svg" class="profile-pic" onclick="showLogout()">
+    </div>
+    <div class="logout-button-mobile d-none" id="logout-button-mobile" onclick="hideLogout()">
+        <a href="index.html"><div>Log out</div></a>
     </div>
     <div class="footer">
         <a href="summary.html">
