--- a/assets/templates/destop_template_style.css
+++ b/assets/templates/destop_template_style.css
@@ -99,6 +99,34 @@
         cursor: pointer;
     }
 
+    .logout-button{
+        z-index: 2;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .logout-button a{
+        position: absolute;
+        right: 33px;
+        top: 89px;
+        text-decoration: none;
+    }
+
+    .logout-button div{
+        background-color:#2A3647;
+        color: rgb(136, 136, 136);
+        width: 120px;
+        height: 42px;
+        border-radius: 16px 0px 16px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+    }
+
     .d-none{
         display: none;
     }
