--- a/assets/templates/mobile_template_style.css
+++ b/assets/templates/mobile_template_style.css
@@ -6,6 +6,10 @@
     display: none;
 }
 
+.logout-button-mobile{
+    display: none;
+}
+
 @media(max-width: 1024px){
 
     .topper-mobile{
@@ -31,6 +35,39 @@
     .profile-pic{
         border-radius: 100%;
         border: 1px solid black;
+    }
+
+    .profile-pic:hover{
+        cursor: pointer;
+    }
+    
+    .logout-button-mobile{
+        display: unset;
+        z-index: 2;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .logout-button-mobile a{
+        position: absolute;
+        right: 33px;
+        top: 84px;
+        text-decoration: none;
+    }
+
+    .logout-button-mobile div{
+        background-color:#2A3647;
+        color: rgb(136, 136, 136);
+        width: 120px;
+        height: 42px;
+        border-radius: 16px 0px 16px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
     }
 
     .footer{
