--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -12,8 +12,12 @@
         <img src="assets/img/joinlogoBlack.svg">
         <img src="assets/img/profile_pic.svg" class="profile-pic" onclick="showLogout()">
     </div>
-    <div class="logout-button-mobile d-none" id="logout-button-mobile" onclick="hideLogout()">
-        <a href="index.html"><div>Log out</div></a>
+    <div class="options-mobile d-none" id="options-mobile" onclick="hideLogout()">
+        <div>
+            <a onclick="showHelp()">Help</a>
+            <a href="legal_notice.html">Legal Notice</a>
+            <a href="index.html">Log out</a>
+        </div>
     </div>
     <div class="footer">
         <a href="summary.html">
