--- a/assets/templates/mobile_template_style.css
+++ b/assets/templates/mobile_template_style.css
@@ -6,7 +6,7 @@
     display: none;
 }
 
-.logout-button-mobile{
+.options-mobile{
     display: none;
 }
 
@@ -41,7 +41,7 @@
         cursor: pointer;
     }
     
-    .logout-button-mobile{
+    .options-mobile{
         display: unset;
         z-index: 2;
         position: fixed;
@@ -51,23 +51,29 @@
         bottom: 0;
     }
 
-    .logout-button-mobile a{
+    .options-mobile div{
         position: absolute;
-        right: 33px;
-        top: 84px;
-        text-decoration: none;
-    }
-
-    .logout-button-mobile div{
+        right: 20px;
+        top: 81px;
         background-color:#2A3647;
-        color: rgb(136, 136, 136);
-        width: 120px;
-        height: 42px;
+        width: 100px;
         border-radius: 16px 0px 16px 16px;
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: center;
         font-size: 14px;
+        padding: 8px;
+        padding-left: 16px;
+    }
+
+    .options-mobile a{
+        text-decoration: none;
+        margin: 4px 0px;
+        color: rgb(201, 201, 201);
+    }
+
+    .options-mobile a:hover{
+        cursor: pointer;
     }
 
     .footer{
