--- a/summary_style.css
+++ b/summary_style.css
@@ -120,7 +120,7 @@ body{
 
 .second-row:hover{
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
     background-color: #2A3647;
     color: white;
     transition: 225ms ease-in-out;
@@ -341,8 +341,12 @@ body{
         width: 29%;
     }
 
+    .first-row h2{
+        font-size: 36px;
+    }
+
     .first-row span{
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .second-row{
