--- a/board.css
+++ b/board.css
@@ -21,10 +21,10 @@ body {
 .inner-content {
     background-color: #F6F7F8;
     position: relative;
-    left: 8%;
+    left: 200px;
     top: 89px;
     height: calc(100vh - 89px);
-    width: calc(100% - 459px);
+    width: 75%;
 }
 
 .main-heading {
@@ -36,7 +36,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* width: 85%; */
+    width: 85%;
 }
 
 .input-and-button-container {
@@ -103,7 +103,7 @@ body {
 
 
 .tasks-container {
-    width: 100%;
+    width: 85%;
     display: flex;
     justify-content: space-between;
 }
@@ -453,6 +453,27 @@ body {
     overflow-y: unset !important;
 }
 
+.content-mobile {
+    display: none;
+}
+
+.small-heading-mobile {
+    font-size: 18px;
+}
+
+.add-task-btn-mobile {
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+    background: #2A3647;
+    border: none;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+
+}
 
 
 /* MOBILE VERSION */
@@ -461,5 +482,70 @@ body {
 @media(max-width: 1024px) {
     .content-destop {
         display: none;
+    }
+
+    .content-mobile {
+        display: block;
+        width: 100%;
+        margin-top: 80px;
+        padding: 32px;
+    }
+
+    .heading-search-add {
+        width: 100%;
+    }
+
+    .tasks-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .task {
+        width: 100%;
+    }
+
+    .task-card {
+        margin-bottom: 32px;
+    }
+
+    .card-bottom {
+        width: 95%;
+    }
+
+
+
+}
+
+
+@media (max-width: 750px) {
+    .heading-search-add {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+
+    .add-task-btn {
+        display: none;
+    }
+
+
+    .add-task-btn-mobile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 50px;
+        right: 0px;
+    }
+
+    .input-and-button-container {
+        width: auto;
+    }
+
+    .card-bottom {
+        width: 90%;
     }
 }
