--- a/contacts_style.css
+++ b/contacts_style.css
@@ -8,7 +8,7 @@ body {
     min-width: 1024px;
     height: 100vh;
     display: flex;
-    font-family: Inter;
+    font-family: 'Inter';
     box-sizing: border-box;
     position: relative;
 }
@@ -30,14 +30,13 @@ h3 {
 .complete-page {
     display: flex;
     flex-direction: row;
-    height: 91vh;
+    height: calc(100vh - 89px);
 }
 
 /* Left side of Page  */
 
 .all-contacts {
     width: 35%;
-    max-height: 90vh;
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -115,7 +114,7 @@ h3 {
 .email-small {
     font-size: 10px;
     font-weight: 600;
-    color: rgb(12, 104, 191);
+    color: rgb(41, 171, 226);
 }
 
 
@@ -196,6 +195,11 @@ font-weight: 600;
     font-weight: 600;
 }
 
+.addTask-button:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .contact-information {
     display: flex;
     flex-direction: row;
@@ -217,6 +221,7 @@ font-weight: 600;
 
 .edit-contact:hover {
     cursor: pointer;
+    color: rgb(41, 171, 226);
 }
 
 .edit-contact img {
@@ -243,6 +248,7 @@ margin-top: 30px;
 
 .email-adress:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 .phone-div {
@@ -258,6 +264,7 @@ margin-top: 30px;
 
 .phone-number:hover {
     cursor: pointer;
+    color: rgb(41, 171, 226);
 }
 
 .new-contact-button {
@@ -266,15 +273,31 @@ margin-top: 30px;
     right: 10%;
 }
 
-.new-contact-button img {
+.new-contact-button button {
     height: 45px;
+    background-color: rgb(42, 54, 71);
+    color: white;
+    border-radius: 8px;
+    font-size: 17px;
+    font-weight: 600;
+    border: none;
 }
 
-@media (max-width: 1024px) {
+.new-contact-button img {
+    height: 25px;
+    margin-left: 8px;
+}
+
+.new-contact-button button:hover {
+    background-color: rgb(41, 171, 226);
+}
+
+
+/*@media (max-width: 1024px) {
     .content-destop{
         display: none;
     }
-}
+}*/
 
 
 
@@ -289,7 +312,7 @@ margin-top: 30px;
 }
 
 .addedit-contact {
-    height: 430px;
+    height: 420px;
     width: 900px;
     display: flex;
     flex-direction: row;
@@ -388,15 +411,47 @@ margin-top: 30px;
     width: 90%;
     margin-top: 35px;
 }
-.add-contact-buttons {
+.add-contact-buttons{
     display: flex;
     flex-direction: row;
     margin-top: 40px;
 }
 
-.add-contact-buttons img {
-    height: 50px;
-    margin-right: 30px;
+.button-cancel button {
+    height: 48px;
+    width: 95px;
+    color: rgb(42, 54, 71);
+    background-color: white;
+    border: 1px solid rgb(42, 54, 71);
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.button-cancel button:hover {
+    color: rgb(41, 171, 226);
+    border: 1px solid rgb(41, 171, 226);
+    
+}
+
+.button-cancel button img {
+    height: 23px;
+}
+
+.button-create button {
+    background-color: rgb(42, 54, 71);
+    color: white;
+    border-radius: 8px;
+    height: 48px;
+    font-weight: 500;
+    border: none;
+}
+
+.button-create button:hover {
+    background-color: rgb(41, 171, 226);
+} 
+
+.button-create button img {
+    height: 23px;
 }
 
 .edit-contact-buttons {
@@ -404,7 +459,181 @@ margin-top: 30px;
     justify-content: center;
 }
 
-.edit-contact-buttons img {
-    height: 40px;
-    margin-top: 25%;
+.edit-contact-buttons button {
+    height: 45px;
+    width: 100px;
+    margin-top: 40px;
+    margin-right: 15px;
+    background-color: rgb(42, 54, 71);
+    color: white;
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 500;
+    border: none;
+}
+
+.edit-contact-buttons button:hover {
+    background-color: rgb(41, 171, 226);
+}
+
+@media (min-width: 1024px) {
+    .button-new-contact {
+        display: none;
+    }
+
+    .white-x {
+        display: none;
+    }
+}
+
+
+@media (max-width: 1024px) {
+    .content-destop {
+        min-width: 0px;
+    }
+
+    .inner-content {
+        left: 0;
+        width: 100%;
+        top: 0;
+        margin-top: 85px;
+        margin-bottom: 90px;
+        padding-bottom: 85px;
+    }
+
+    .complete-page {
+        flex-direction: column;
+    }
+
+    .button-new-contact {
+        display: flex;
+        justify-content: flex-end;
+        margin: 10px;
+        width: 90%;
+        
+    }
+
+    .button-new-contact img {
+        height: 25px;
+    }
+
+    .button-new-contact button {
+        background-color: rgb(42, 54, 71);
+        color: white;
+        border-radius: 8px;
+        height: 48px;
+        font-size: 20px;
+        font-weight: 500;
+        border: none;
+        padding-left: 10px;
+    }
+
+    .all-contacts {
+        width: 100%;
+    }
+
+    .alphabet-box {
+        width: 90%;
+    }
+
+    .single-contact {
+        height: 80px;
+    }
+
+   .name-small {
+    font-size: 24px;
+    font-weight: 500;
+   }
+
+   .email-small {
+    font-size: 15px;
+    font-weight: 500;
+   }
+
+    .complete-contact {
+        display: none;
+    }
+
+    .addedit-contact {
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
+
+    .addedit-contact-design {
+        width: 100%;
+        height: 43vh;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 25px;
+    }
+
+    .white-x {
+        position: absolute;
+        top: 30px;
+        right: 25px;
+    }
+
+    .addedit-contact-fields {
+        width: 100%;
+        height: 53vh;
+        flex-direction: column;
+        align-items: center;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border: 2px solid lightgrey;
+    }
+
+    .addedit-contact-logo {
+        display: none;
+    }
+
+    .addedit-contact-design {
+        align-items: center;
+        padding-top: 50px;
+    }
+
+    .addedit-contact-image img{
+        height: 16%;
+        position: absolute;
+    }
+
+    .addedit-contact-headline h2 {
+        font-size: 50px;
+    }
+
+    .addedit-contact-line {
+        width: 35%;
+    }
+
+    .name-field {
+        width: 100%;
+    }
+
+    .email-field {
+        width: 100%;
+    }
+
+    .phone-field {
+        width: 100%;
+    }
+
+
+
+    .addedit-contact-input-fields {
+        align-items: center;
+    }
+
+    .button-cancel {
+        display: none;
+    }
+
+    .button-create button {
+        width: 210px;
+        font-size: 20px;
+    }
+
+    .close-x {
+        display: none;
+    }
 }
