--- a/login_style.css
+++ b/login_style.css
@@ -7,6 +7,17 @@ body {
     display: none;
 }
 
+.hover-dark:hover {
+    cursor: pointer;
+    background-color: rgb(41, 171, 226);
+}
+
+.hover-bright:hover {
+    cursor: pointer;
+    border: 2px solid rgb(41, 171, 226);
+    color: rgb(41, 171, 226);
+}
+
 .complete-page {
     position: relative;
     background-color: rgb(246, 247, 248);
@@ -50,20 +61,37 @@ body {
     margin-bottom: 6%;
 }
 
+.name-field input {
+    height: 40px;
+    font-size: 15px;
+}
+
+
 .email-field {
     width: 65%;
     margin-bottom: 6%;
+}
+
+.email-field input {
+    height: 40px;
+    font-size: 15px;
 }
 
 .password-field {
     width: 65%;
 }
 
+.password-field input {
+    height: 40px;
+    font-size: 15px;
+}
+
 .button {
     padding-left: 22px;
     padding-right: 22px;
-    height: 30px;
+    height: 36px;
     border-radius: 5px;
+    border: none;
     background-color: rgb(42, 54, 71);
     color: white;
     display: flex;
@@ -112,8 +140,8 @@ body {
 }
 
 .login-area {
-    height: 360px;
-    width: 450px;
+    height: 400px;
+    width: 550px;
     background-color: rgb(255, 255, 255);
     border-radius: 25px;
     display: flex;
@@ -125,6 +153,13 @@ body {
     height: 35px;
 }
 
+.form-style {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .rememberMe-forgotPassword {
     width: 57%;
     height: 40px;
@@ -133,7 +168,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     font-size: 12px;
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 .remember-me {
@@ -161,7 +196,7 @@ margin-right: 10px;
 
 .guestLogin-button {
     width: 120px;
-    height: 30px;
+    height: 36px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     border: 2px solid rgb(148, 154, 163);
@@ -180,7 +215,7 @@ margin-right: 10px;
 .signUp-area {
     position: relative;
     width: 450px;
-    height: 380px;
+    height: 400px;
     background-color: rgb(255, 255, 255);
     border-radius: 25px;
     display: flex;
