--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -1,33 +1,44 @@
-body {
-    margin: 0;
+body{
     font-family: Inter;
 }
 
-.content-destop {
+.content-background{
+    z-index: 100;
     width: 100%;
-    min-width: 1024px;
-    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0, 0.7);
     display: flex;
-    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-addtask{
+    width: 80%;
+    max-width: 1024px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 32px;
+    border-radius: 40px;
     position: relative;
 }
 
-.inner-content {
-    background-color: #F6F7F8;
-    position: relative;
-    left: 232px;
-    top: 89px;
-    height: calc(100vh - 89px);
-    width: calc(100% - 232px);
-    padding: 48px 80px;
-    box-sizing: border-box;
+.close-btn{
+    position: absolute;
+    right: 32px;
+    top: 32px;
 }
 
-.content-mobile {
-    display: none;
+.close-btn:hover{
+    cursor: pointer;
 }
 
-.inner-content h1 {
+h1{
     font-size: 52px;
     margin: 0;
     margin-bottom: 32px;
@@ -190,52 +201,29 @@ select:hover {
     cursor: pointer;
 }
 
-.create-task-btn-mobile{
-    display: none;
-}
-
-@media(max-width: 1024px) {
-    .content-destop {
-        display: none;
+@media(max-width:1024px){
+    .content-background{
+        z-index: 2;
+        top: 112px;
     }
 
-    .content-mobile {
-        position: relative;
-        top: 79px;
-        height: calc(100vh - 159px);
-        display: unset;
-        padding: 16px 10%;
-        display: flex;
-        flex-direction: column;
-        background-color: #F6F7F8;
-        box-sizing: border-box;
+    .content-addtask{
+        width: 100%;
+        height: 100%;
         overflow-y: scroll;
+        border-radius: 0;
+        background-color: F6F7F8;
     }
 
-    h1{
-        font-size: 42px;
-    }
-
-    .form-mobile {
-        display: flex;
+    .formContentWithButton{
         flex-direction: column;
     }
 
-    .form-mobile span {
-        margin-top: 24px;
-        margin-bottom: 6px;
+    .clear-btn{
+        display: none !important;
     }
 
-    .choosePriority div {
-        min-width: 96px;
-        width: 20%;
-    }
-
-    .choosePriority span {
-        margin: 0;
-    }
-
-    .create-task-btn-mobile {
+    .create-task-btn {
         z-index: 10;
         position: fixed;
         top: 16px;
@@ -250,22 +238,5 @@ select:hover {
         display: flex;
         align-items: center;
         padding: 0px 8px;
-    }
-
-    .create-task-btn-mobile img {
-        height: 10px;
-        object-fit: contain;
-        margin-left: 10px;
-    }
-
-    .create-task-btn-mobile:hover {
-        background-color: #29ABE2;
-        cursor: pointer;
-    }
-}
-
-@media(max-width: 500px){
-    .content-mobile {
-        padding: 16px 2%;
     }
 }
