--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -5,26 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join - Add task</title>
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
-    <link rel="stylesheet" href="add_task.css">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="assets/templates/add_task_template.css">
     <link rel="stylesheet" href="fonts.css">
 
-    <script src="script.js"></script>
+    <script src="add_task.js"></script>
 </head>
 
-<body onload="render('addtask')">
-
-    <div w3-include-html="assets/templates/mobile_template.html"></div>
-
-    <div class="content-destop">
-        <div w3-include-html="assets/templates/destop_template.html"></div>
-        <div w3-include-html="assets/templates/help_template.html"></div>
-        <div class="inner-content" id="inner-content">
+<body>
+    <div class="content-background" onclick="hideAddTask()">
+        <div class="content-addtask" onclick="doNotClose(event)">
             <h1>Add task</h1>
             <form action="">
+                <img src="assets/img/close-button-addtask.svg" class="close-btn" onclick="hideAddTask()">
                 <div class="formContentWithButton">
-                    <div class="divContentAddtask" style="border-right: 1px solid rgb(186, 186, 186); padding-left: 0;">
+                    <div class="divContentAddtask" style="@media(min-width:1024px){border-right: 1px solid rgb(186, 186, 186); padding-left: 0;}">
                         <span style="margin-top: 0;">Title</span>
                         <input required placeholder="Enter a title">
                         <span>Description</span>
@@ -72,54 +68,6 @@
             </form>
         </div>
     </div>
-
-        
-    </div>
-    <div class="content-mobile">
-        <div w3-include-html="assets/templates/help_template_mobile.html"></div>
-        <span style="font-size: small;">Kanban Project Management Tool</span>
-        <h1>Add task</h1>
-        <form class="form-mobile">
-            <span style="margin-top: 0;">Title</span>
-            <input required placeholder="Enter a title">
-            <span>Description</span>
-            <textarea required placeholder="Enter a description"></textarea>
-            <span>Category</span>
-            <select required>
-                <option value="" disabled selected>Select task category</option>
-                <option>New Category</option>
-                <option value="sales">Sales</option>
-                <option value="backoffice">Backoffice</option>
-            </select>
-            <span>Assigned to</span>
-            <select required>
-                <option value="" disabled selected>Select contacts to assign</option>
-                <option>You</option>
-                <option value="content 1">Contact 1</option>
-                <option>Invite new contact</option>
-            </select>
-            <span>Prio</span>
-            <div class="choosePriority">
-                <div id="urgent-btn">
-                    <span>Urgent</span>
-                    <img src="assets/img/addTaskUrgentSymbol.svg">
-                </div>
-                <div id="medium-btn">
-                    <span>Medium</span>
-                    <img src="assets/img/addTaskMediumSymbol.svg">
-                </div>
-                <div id="low-btn">
-                    <span>Low</span>
-                    <img src="assets/img/addTaskLowSymbol.svg">
-                </div>
-            </div>
-            <span>Due date</span>
-            <input required type="date">
-            <button type="submit" class="create-task-btn-mobile">Create Task<img
-                src="assets/img/createTaskImg.svg"></button>
-        </form>
-    </div>
-
 </body>
 
 </html>
