--- a/board.css
+++ b/board.css
@@ -20,11 +20,14 @@ body {
 
 .inner-content {
     background-color: #F6F7F8;
-    position: relative;
-    left: 200px;
+    position: absolute;
+    left: 232px;
     top: 89px;
     height: calc(100vh - 89px);
-    width: 75%;
+    width: calc(100% - 232px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-heading {
@@ -36,7 +39,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 85%;
+    width: 90%;
 }
 
 .input-and-button-container {
@@ -103,7 +106,7 @@ body {
 
 
 .tasks-container {
-    width: 85%;
+    width: 90%;
     display: flex;
     justify-content: space-between;
 }
@@ -161,6 +164,7 @@ body {
     position: relative;
 
     cursor: pointer;
+    margin-bottom: 22px;
 
 }
 
@@ -292,6 +296,7 @@ body {
     position: absolute;
     right: 16px;
     top: 16px;
+    cursor: pointer;
 }
 
 .edit-overlay-btn {
@@ -303,6 +308,7 @@ body {
     position: absolute;
     bottom: 32px;
     right: 32px;
+    cursor: pointer;
 }
 
 .edit-overlay-btn:hover {
@@ -476,101 +482,3 @@ body {
 }
 
 
-/* MOBILE VERSION */
-
-
-@media(max-width: 1024px) {
-    .content-destop {
-        display: none;
-    }
-
-    .content-mobile {
-        display: block;
-        width: 100%;
-        margin-top: 80px;
-        padding: 32px;
-    }
-
-    .heading-search-add {
-        width: 100%;
-    }
-
-    .tasks-container {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .task {
-        width: 100%;
-    }
-
-    .task-card {
-        margin-bottom: 32px;
-    }
-
-    .card-bottom {
-        width: 95%;
-    }
-
-
-    .card-category {
-        width: 30%;
-    }
-
-
-
-}
-
-@media (max-width: 850px) {
-    .card-container {
-        position: relative;
-        top: 80px;
-        bottom: 80px;
-        width: 100vw;
-        border-radius: none;
-
-
-    }
-
-    .edit-overlay-btn {
-        position: fixed;
-        bottom: 22px;
-        right: 22px;
-    }
-
-}
-
-
-@media (max-width: 750px) {
-    .heading-search-add {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-
-    }
-
-    .add-task-btn {
-        display: none;
-    }
-
-
-    .add-task-btn-mobile {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 50px;
-        right: 0px;
-    }
-
-    .input-and-button-container {
-        width: auto;
-    }
-
-    .card-bottom {
-        width: 90%;
-    }
-
-}
