--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -40,20 +40,20 @@
                             <option>Invite new contact</option>
                         </select>
                     </div>
-                    <div class="divContentAddtask" style="padding-right: 0;">
+                    <div class="divContentAddtask" style="@media(min-width:1024px){padding-right: 0;}">
                         <span style="margin-top: 0;">Due date</span>
                         <input required type="date">
                         <span>Prio</span>
                         <div class="choosePriority">
-                            <div id="urgent-btn">
+                            <div id="urgent-btn" onclick="clickPriorityButton('urgent-btn')">
                                 <span>Urgent</span>
                                 <img src="assets/img/addTaskUrgentSymbol.svg">
                             </div>
-                            <div id="medium-btn">
+                            <div id="medium-btn" onclick="clickPriorityButton('medium-btn')">
                                 <span>Medium</span>
                                 <img src="assets/img/addTaskMediumSymbol.svg">
                             </div>
-                            <div id="low-btn">
+                            <div id="low-btn" onclick="clickPriorityButton('low-btn')">
                                 <span>Low</span>
                                 <img src="assets/img/addTaskLowSymbol.svg">
                             </div>
