--- a/board.css
+++ b/board.css
@@ -33,6 +33,8 @@ body {
 .main-heading {
     font-size: 61px;
     font-weight: 700;
+    margin-bottom: 0 !important;
+
 }
 
 .heading-search-add {
@@ -40,6 +42,7 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 90%;
+    margin-top: 50px;
 }
 
 .input-and-button-container {
@@ -146,7 +149,7 @@ body {
 /* TASK CARDS */
 
 .task-card {
-    min-height: 200px;
+    /* min-height: 200px; */
     background-color: #FFFFFF;
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     border-radius: 30px;
@@ -206,43 +209,32 @@ body {
 
 .card-bottom {
     display: flex;
-    position: absolute;
-    bottom: 7px;
-    width: 85%;
+    /* position: absolute;
+    bottom: 7px; */
+    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
 
+.contributors-container {
+    display: flex;
+}
+
 .contributors-circle {
     box-sizing: border-box;
-
-    /* Auto layout */
-
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 9px;
-    /* gap: 10px; */
-
     color: white;
     font-weight: 200;
-
+    font-size: 14px;
     width: 30px;
     height: 30px;
-
     background: #02CF2F;
-    /* white */
-
-    /* border: 1px solid #FFFFFF; */
     border-radius: 58px;
-
-    /* Inside auto layout */
-
-    /* flex: none;
-    order: 2;
-    flex-grow: 0; */
-
+    margin-right: 5px;
 }
 
 
