--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -17,23 +17,23 @@
     <div class="content-background" onclick="hideAddTask()">
         <div class="content-addtask" onclick="doNotClose(event)">
             <h1>Add task</h1>
-            <form action="">
+            <form onsubmit="createTask(); return false">
                 <img src="assets/img/close-button-addtask.svg" class="close-btn" onclick="hideAddTask()">
                 <div class="formContentWithButton">
                     <div class="divContentAddtask" style="@media(min-width:1024px){border-right: 1px solid rgb(186, 186, 186); padding-left: 0;}">
                         <span style="margin-top: 0;">Title</span>
-                        <input required placeholder="Enter a title">
+                        <input required placeholder="Enter a title" id="input-title">
                         <span>Description</span>
-                        <textarea required placeholder="Enter a description"></textarea>
+                        <textarea required placeholder="Enter a description" id="input-description"></textarea>
                         <span>Category</span>
-                        <select required>
+                        <select required id="select-category">
                             <option value="" disabled selected>Select task category</option>
                             <option>New Category</option>
                             <option value="sales">Sales</option>
                             <option value="backoffice">Backoffice</option>
                         </select>
                         <span>Assigned to</span>
-                        <select required>
+                        <select required id="select-assigned">
                             <option value="" disabled selected>Select contacts to assign</option>
                             <option>You</option>
                             <option value="content 1">Contact 1</option>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="divContentAddtask" style="@media(min-width:1024px){padding-right: 0;}">
                         <span style="margin-top: 0;">Due date</span>
-                        <input required type="date">
+                        <input required type="date" id="input-date">
                         <span>Prio</span>
                         <div class="choosePriority">
                             <div id="urgent-btn" onclick="clickPriorityButton('urgent-btn')">
@@ -61,12 +61,16 @@
                     </div>
                 </div>
                 <div class="div-button">
-                    <button class="clear-btn">Clear<img src="assets/img/clearTaskImg.svg"></button>
-                    <button type="submit" class="create-task-btn">Create Task<img
+                    <button class="clear-btn" type="button" onclick="clearTask()">Clear<img src="assets/img/clearTaskImg.svg"></button>
+                    <button type="submit" class="create-task-btn" >Create Task<img
                             src="assets/img/createTaskImg.svg"></button>
                 </div>
             </form>
         </div>
+    </div>
+    <div class="dialog-taskadded d-none" id="dialog-taskadded">
+        <span>Task added to board</span>
+        <img src="assets/img/icon-summary.svg">
     </div>
 </body>
 
