--- a/login_style.css
+++ b/login_style.css
@@ -86,6 +86,36 @@ body {
     font-size: 15px;
 }
 
+.signup-name-field {
+    width: 65%;
+    margin-bottom: 6%;
+}
+
+.signup-name-field input {
+    height: 40px;
+    font-size: 15px;
+}
+
+
+.signup-email-field {
+    width: 65%;
+    margin-bottom: 6%;
+}
+
+.signup-email-field input {
+    height: 40px;
+    font-size: 15px;
+}
+
+.signup-password-field {
+    width: 65%;
+}
+
+.signup-password-field input {
+    height: 40px;
+    font-size: 15px;
+}
+
 .button {
     padding-left: 22px;
     padding-right: 22px;
@@ -211,6 +241,11 @@ margin-right: 10px;
 
 
 /* Design for Sign Up Area*/
+.signUp-display {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
 .signUp-area {
     position: relative;
@@ -287,4 +322,127 @@ margin-right: 10px;
     align-items: center;
     font-size: 13px;
     font-weight: 600;
+}
+
+
+@media (min-width: 550px) {
+    .login-head-mobile {
+        display: none;
+    }
+}
+
+
+@media (max-width: 550px) {
+    .join-logo img{
+        height: 80px;
+    }
+
+    .join-logo {
+        top: 2%;
+        left: 9%;
+        z-index: 1;
+    }
+
+    .login-head {
+        display: none;
+
+    }
+
+    .login-head-mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding-right: 6%;
+        margin-top: 30px;
+        font-size: 17px;
+    }
+
+    .login-head-mobile button {
+        width: 75px;
+        height: 45px;
+        font-size: 14px;
+        font-weight: 600;
+        background-color: rgb(42, 54, 71);
+        color: rgb(255, 255, 255);
+        border-radius: 5px;
+        margin-left: 5%;
+        border: none;
+    }
+     
+    .headline {
+        margin-top: 8%;
+    }
+
+    .headline-underline {
+        margin-bottom: 8%;
+    }
+
+    .email-field {
+        margin-bottom: 8%;
+    }
+
+    .login-display {
+        position: absolute;
+        margin-top: 15%;
+        min-height: 580px;
+    }
+
+    .login-area {
+        height: 90%;
+        width: 90%;
+        padding-bottom: 30px;
+    }
+
+    .rememberMe-forgotPassword {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        height: 80px;
+        width: 62%;
+        margin-top: 6%;
+    }
+
+    .remember-me {
+        margin-top: 10px;
+    }
+
+    .login-guestlogin {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 6%;
+    }
+
+    .button {
+        margin-bottom: 20px;
+        width: 160px;
+        height: 43px;
+    }
+
+    .guestLogin-button {
+        width: 160px;
+        margin-left: 0;
+        height: 43px;
+    }
+
+    /* Sign up Area*/
+
+    .signUp-area {
+        height: 550px;
+        width: 90%;
+    }
+
+    .signup-name-field {
+        width: 80%;
+        margin-bottom: 11%;
+    }
+
+    .signup-email-field {
+        width: 80%;
+        margin-bottom: 11%;
+    }
+
+    .signup-password-field {
+        width: 80%;
+        margin-bottom: 11%;
+    }
 }
