--- a/board-mobile.css
+++ b/board-mobile.css
@@ -14,6 +14,11 @@
         padding: 8px 7px;
     }
 
+    .contributors-circle-big {
+        height: 40px;
+        width: 40px;
+    }
+
 
 
 }
@@ -87,8 +92,8 @@
 
     .edit-overlay-btn {
         position: absolute;
-        bottom: 22px;
-        right: 22px;
+        bottom: 50px;
+        right: 50px;
     }
 
 }
