--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -16,7 +16,7 @@
 <body>
     <div class="content-background" onclick="hideAddTask()">
         <div class="content-addtask" onclick="doNotClose(event)">
-            <h1>Add task</h1>
+            <h1 class="addtask-h1">Add task</h1>
             <form onsubmit="createTask(); return false">
                 <img src="assets/img/close-button-addtask.svg" class="close-btn" onclick="hideAddTask()">
                 <div class="formContentWithButton">
