--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -59,7 +59,7 @@
         <div class="img-topper">
             <img src="assets/img/questionmark_topper.svg" onclick="showHelp()" id="help-button"
                 class="questionmark-topper">
-            <img src="assets/img/profile_pic.svg" onclick="showLogout()" class="profile-pic">
+            <img src="assets/img/profile_pic.png" onclick="showLogout()" class="profile-pic">
         </div>
     </div>
     <div class="logout-button d-none" id="logout-button" onclick="hideLogout()">
