--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topper-mobile">
         <img src="assets/img/joinlogoBlack.svg">
-        <img src="assets/img/profile_pic.svg" class="profile-pic" onclick="showLogout()">
+        <img src="assets/img/profile_pic.png" class="profile-pic" onclick="showLogout()">
     </div>
     <div class="options-mobile d-none" id="options-mobile" onclick="hideLogout()">
         <div>
