--- a/assets/templates/help_template_mobile_style.css
+++ b/assets/templates/help_template_mobile_style.css
@@ -1,7 +1,8 @@
 .help-content-mobile{
+    z-index: 999;
     background-color: #F6F7F8;
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    top: 89px;
     left: 0px;
     width: 100%;
     height: calc(100vh - 159px);
