--- a/assets/templates/help_template_style.css
+++ b/assets/templates/help_template_style.css
@@ -42,3 +42,50 @@
     font-weight: bold;
     margin-right: 24px ;
 }
+
+@media(max-width: 1024px){
+    .help-content{
+        z-index: 1;
+        background-color: #F6F7F8;
+        position: fixed;
+        top: 89px;
+        left: 0px;
+        width: 100%;
+        height: calc(100vh - 159px);
+        padding: 32px;
+        box-sizing: border-box;
+        overflow-y: scroll;
+    }
+    
+    .help-content img{
+        position: absolute;
+        top: 40px;
+        right: 28px;
+    }
+    
+    .help-content img:hover{
+        cursor: pointer;
+    }
+    
+    .help-content h1{
+        margin: 0;
+        font-size: 48px;
+        margin-bottom: 40px;
+    }
+    
+    .help-table{
+        margin-top: 44px;
+    }
+    
+    
+    .help-table div{
+        display: flex;
+        align-items: center;
+    }
+    
+    .help-table span{
+        font-size: 24px;
+        font-weight: bold;
+        margin-right: 24px ;
+    }
+}
