--- a/contacts_style.css
+++ b/contacts_style.css
@@ -13,7 +13,9 @@ body {
     bottom: 80px;
     right: 0;
     left: 0;
-    z-index: 1;
+    z-index: 11;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .content-destop{
@@ -144,6 +146,7 @@ h3 {
 .this-contact {
     width: 80%;
     margin-top: 60px;
+    overflow-y: auto;
 }
 
 .head {
@@ -160,6 +163,7 @@ h3 {
 .headline-contacts h1 {
     font-size: 50px;
     font-weight: 700;
+    margin-bottom: 0;
 }
 
 .horizontal-line {
@@ -365,6 +369,7 @@ margin-top: 30px;
     display: flex;
     flex-direction: row;
     position: relative;
+    z-index: 5;
 }
 
 .addedit-contact-design {
@@ -548,7 +553,7 @@ margin-top: 30px;
 
 @media (max-width: 1024px) {
     .overlay {
-        top: 90px;
+        background-color: rgba(0, 0, 0, 0.5);
     }
 
     .overlay-complete-contact {
@@ -625,7 +630,7 @@ margin-top: 30px;
    }
 
     .addedit-contact {
-        margin-bottom: 15%;
+        margin-top: 10vh;
     }
 
     
@@ -636,9 +641,19 @@ margin-top: 30px;
         width: 100%;
     }
 
+    .this-contact {
+        margin-top: 20px;
+        height: calc(100vh - 190px);
+        padding-bottom: 70px;
+    }
+
     .head {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .headline-contacts h1{
+        margin-bottom: 32px;
     }
 
     .horizontal-line {
@@ -663,13 +678,24 @@ margin-top: 30px;
     }
 
 } 
-
+    @media (min-width: 900px){
+            .white-x {
+                display: none;
+            }
+    }
     @media (max-width: 900px) {
+        .overlay {
+            background-color: rgba(0, 0, 0, 0)
+        }
+
+        .addedit-contact-display {
+            display:block;
+        }
+
         .addedit-contact {
             flex-direction: column;
             width: 100%;
-            height: 100%;
-            margin-bottom: 0;
+            height: 80%;
         }
     
         .addedit-contact-design {
@@ -692,6 +718,8 @@ margin-top: 30px;
             align-items: center;
             border-top-right-radius: 0;
             border: 2px solid lightgrey;
+            border-bottom-right-radius: 25px;
+            border-bottom-left-radius: 25px;
         }
     
         .addedit-contact-logo {
@@ -701,11 +729,6 @@ margin-top: 30px;
         .addedit-contact-design {
             align-items: center;
             padding-top: 50px;
-        }
-
-        .addedit-contact-fields {
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
         }
     
         .addedit-contact-image img{
@@ -748,10 +771,39 @@ margin-top: 30px;
         .button-create button {
             width: 210px;
             font-size: 20px;
+            margin-bottom: 10px;
         }
     
         .close-x {
             display: none;
         }
         
+    }
+
+    @media (max-width: 400px){
+        .addedit-contact-fields {
+            padding-bottom: 20px;
+        }
+        
+        .addedit-contact-design {
+            padding-top: 10px;
+        }
+
+        .addedit-contact-headline h2 {
+            font-size: 40px;
+        }
+
+        .addedit-contact-motivation {
+            font-size: 15px;
+        }
+
+        .addedit-contact-line {
+            margin-bottom: 8%;
+        }
+
+        .addedit-contact-image img {
+            height: 85px;
+        }
+
+
     }
