--- a/board-mobile.css
+++ b/board-mobile.css
@@ -137,6 +137,10 @@
 
 }
 
+@media(max-width: 450px) {
+    
+}
+
 @media (max-width: 350px) {
     .small-heading-mobile {
         font-size: 16px;
