--- a/contacts_style.css
+++ b/contacts_style.css
@@ -696,6 +696,7 @@ margin-top: 30px;
             flex-direction: column;
             width: 100%;
             height: 80%;
+            margin-top: 10vh;
         }
     
         .addedit-contact-design {
