--- a/contacts_style.css
+++ b/contacts_style.css
@@ -529,6 +529,9 @@ margin-top: 30px;
     background-color: rgb(41, 171, 226);
 }
 
+
+/*Stop*/
+
 @media (min-width: 1024px) {
     .button-new-contact {
         display: none;
