--- a/legal_notice_style.css
+++ b/legal_notice_style.css
@@ -29,7 +29,7 @@ body {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    /* margin-top: 32px; */
+    margin-top: 32px;
     position: relative;
 }
 
@@ -59,6 +59,11 @@ body {
     justify-content: center;
     margin-top: 89px;
 }
+
+.small-heading-mobile {
+    font-size: 18px;
+}
+
 
 
 @media(max-width: 1024px) {
